tests/ui/once_cache_err_requires_result_return.stderr
error: `cache_err = true` requires the function to return `Result<T, E>`
 --> tests/ui/once_cache_err_requires_result_return.rs:4:4
  |
4 | fn my_fn() -> i32 {
  |    ^^^^^
