tests/ui/once_cache_err_requires_result_return.rs
use cached::macros::once;

#[once(cache_err = true)]
fn my_fn() -> i32 {
    0
}

fn main() {}
